<resources>
    <string name="app_name">TALauncher</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="usage_insights">Usage Insights</string>
    <string name="settings">Settings</string>
    <string name="essential_apps">Essential Apps</string>
    <string name="distracting_apps">Distracting Apps</string>
    <string name="search_apps">Search</string>
    <string name="time_spent_today">Time spent today</string>
    <string name="enable_focus_mode">Enable Focus Mode</string>
    <string name="disable_focus_mode">Disable Focus Mode</string>
    <string name="app_blocked">This app is blocked in Focus Mode</string>
    <string name="why_open_app">Why do you want to open this app?</string>
    <string name="continue_to_app">Continue to App</string>
...
    <string name="settings_background_system">System</string>
    <string name="settings_background_black">Black</string>
    <string name="settings_background_white">White</string>

    <!-- Home Screen -->
    <string name="home_recent_apps_section">Recent Apps</string>
    <string name="home_all_apps_section">All Apps</string>
    <string name="home_other_apps_title">Other Apps</string>
    <string name="home_other_apps_show">Show</string>
    <string name="home_other_apps_hide">Hide</string>
    <string name="home_other_apps_summary_single">1 app hidden from the main list.</string>
    <string name="home_other_apps_summary_plural">%1$d apps hidden from the main list.</string>
    <string name="home_other_apps_hint">Tap to reveal these hidden apps.</string>
...

    <string name="onboarding_appearance_title">Appearance</string>
    <string name="completed">Completed</string>
    <string name="onboarding_action_set_default">Set as Default</string>
    <string name="onboarding_action_grant_permission">Grant Permission</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>

</resources>


